# postgres

./: CMakeLists.txt  PGXS.cmake.in
cmake/: CheckTypeAlignment.cmake  FindLLVM.cmake  RegressCheck.cmake
contrib/: CMakeLists.txt
contrib/adminpack/: CMakeLists.txt
contrib/amcheck/: CMakeLists.txt  verify_nbtree.c
contrib/auth_delay/: CMakeLists.txt  auth_delay.c
contrib/auto_explain/: CMakeLists.txt  auto_explain.c
contrib/bloom/: CMakeLists.txt  blinsert.c  bloom.h  blutils.c
contrib/btree_gin/: CMakeLists.txt
contrib/btree_gist/: CMakeLists.txt
contrib/citext/: CMakeLists.txt
contrib/cube/: CMakeLists.txt
contrib/dblink/: CMakeLists.txt  dblink.c
contrib/dict_int/: CMakeLists.txt
contrib/dict_xsyn/: CMakeLists.txt
contrib/earthdistance/: CMakeLists.txt
contrib/file_fdw/: CMakeLists.txt  file_fdw.c
contrib/fuzzystrmatch/: CMakeLists.txt
contrib/hstore/: CMakeLists.txt
contrib/hstore_plpython/: hstore_plpython.c
contrib/intarray/: CMakeLists.txt
contrib/isn/: CMakeLists.txt
contrib/lo/: CMakeLists.txt
contrib/ltree/: CMakeLists.txt
contrib/ltree_plpython/: ltree_plpython.c
contrib/oid2name/: CMakeLists.txt
contrib/pageinspect/: CMakeLists.txt  heapfuncs.c
contrib/passwordcheck/: CMakeLists.txt  passwordcheck.c
contrib/pg_buffercache/: CMakeLists.txt
contrib/pg_freespacemap/: CMakeLists.txt
contrib/pg_prewarm/: CMakeLists.txt
contrib/pg_standby/: CMakeLists.txt
contrib/pg_stat_statements/: CMakeLists.txt  pg_stat_statements.c
contrib/pg_trgm/: CMakeLists.txt  trgm_op.c  trgm_regexp.c
contrib/pg_visibility/: CMakeLists.txt
contrib/pgcrypto/: CMakeLists.txt  rijndael.c
contrib/pgrowlocks/: CMakeLists.txt
contrib/pgstattuple/: CMakeLists.txt
contrib/postgres_fdw/: CMakeLists.txt  postgres_fdw.c
contrib/seg/: CMakeLists.txt
contrib/sepgsql/: CMakeLists.txt  hooks.c
contrib/spi/: CMakeLists.txt
contrib/tablefunc/: CMakeLists.txt
contrib/tcn/: CMakeLists.txt
contrib/test_decoding/: CMakeLists.txt  test_decoding.c
contrib/tsm_system_rows/: CMakeLists.txt
contrib/tsm_system_time/: CMakeLists.txt
contrib/unaccent/: CMakeLists.txt  unaccent.c
contrib/vacuumlo/: CMakeLists.txt
contrib/xml2/: CMakeLists.txt
src/: CMakeLists.txt
src/backend/: CMakeLists.txt
src/backend/access/brin/: brin.c  brin_tuple.c
src/backend/access/common/: printtup.c  reloptions.c  scankey.c
src/backend/access/gin/: ginbtree.c  ginfast.c  ginget.c  gininsert.c  ginscan.c  ginutil.c  ginvacuum.c  ginxlog.c
src/backend/access/gist/: gist.c  gistbuild.c  gistbuildbuffers.c  gistvacuum.c
src/backend/access/hash/: hashpage.c
src/backend/access/heap/: rewriteheap.c
src/backend/access/nbtree/: nbtree.c  nbtsort.c  nbtutils.c
src/backend/access/spgist/: spginsert.c  spgscan.c  spgxlog.c
src/backend/access/transam/: parallel.c  varsup.c
src/backend/bootstrap/: bootparse.y
src/backend/catalog/: Catalog.pm  index.c  objectaddress.c  pg_inherits.c  toasting.c
src/backend/commands/: analyze.c  async.c  copy.c  event_trigger.c  foreigncmds.c  policy.c  schemacmds.c  subscriptioncmds.c  tablecmds.c  trigger.c
src/backend/executor/: execExpr.c  execExprInterp.c  execPartition.c  execSRF.c  execTuples.c  execUtils.c  functions.c  nodeAgg.c  nodeFunctionscan.c  nodeGatherMerge.c  nodeHash.c  nodeIndexscan.c  nodeMergeAppend.c  nodeMergejoin.c  nodeProjectSet.c  nodeRecursiveunion.c  nodeSetOp.c  nodeSubplan.c  nodeTableFuncscan.c  nodeWindowAgg.c  spi.c
src/backend/jit/llvm/: CMakeLists.txt
src/backend/lib/: integerset.c  knapsack.c
src/backend/libpq/: be-secure.c  hba.c  pqmq.c
src/backend/main/: client_pipe.cpp  client_pipe.hpp  exchange_buffer.cpp  exchange_buffer.hpp  main_sgaz.c  memory_socket.cpp  pg_init.cpp  pg_loader.c  server_pipe.cpp  server_pipe_registrar.cpp  table_scanner.cpp
src/backend/main/pipe_client/: pipe_client--1.0.sql  pipe_client--unpackaged--1.0.sql  pipe_client.control
src/backend/nodes/: makefuncs.c  tidbitmap.c
src/backend/optimizer/geqo/: geqo_eval.c
src/backend/optimizer/path/: costsize.c
src/backend/optimizer/plan/: planner.c
src/backend/optimizer/prep/: prepjointree.c
src/backend/optimizer/util/: clauses.c  plancat.c  relnode.c
src/backend/parser/: gram.y  parse_clause.c
src/backend/partitioning/: partprune.c
src/backend/port/: sysv_shmem.c
src/backend/port/win32/: crashdump.c  signal.c
src/backend/postmaster/: autovacuum.c  checkpointer.c  pgstat.c  postmaster.c  postmasterC60.c.in  save_backend_params.cpp  syslogger.c
src/backend/replication/: walsender.c
src/backend/replication/libpqwalreceiver/: libpqwalreceiver.c
src/backend/replication/logical/: launcher.c  logical.c  reorderbuffer.c  snapbuild.c  worker.c
src/backend/snowball/: CMakeLists.txt  dict_snowball.c
src/backend/statistics/: extended_stats.c  mcv.c
src/backend/storage/file/: fd.c  reinit.c
src/backend/storage/ipc/: latch.c  pmsignal.c  shm_mq.c
src/backend/tcop/: postgres.c  pquery.c
src/backend/tsearch/: ts_typanalyze.c
src/backend/utils/adt/: array_expanded.c  array_typanalyze.c  array_userfuncs.c  datum.c  domains.c  expandedrecord.c  jsonfuncs.c  misc.c  numeric.c  regexp.c  ruleutils.c  selfuncs.c  tsquery_rewrite.c  varlena.c  xml.c
src/backend/utils/cache/: plancache.c  relcache.c  typcache.c
src/backend/utils/error/: assert.c  elog.c
src/backend/utils/fmgr/: fmgr.c
src/backend/utils/init/: postinit.c
src/backend/utils/mb/: mbutils.c
src/backend/utils/misc/: guc-file.l  postgresql.conf.sample  tzparser.c
src/backend/utils/mmgr/: mcxt.c
src/backend/utils/sort/: sharedtuplestore.c  tuplesort.c  tuplestore.c
src/common/: CMakeLists.txt  exec.c  psprintf.c
src/fe_utils/: CMakeLists.txt
src/include/: CMakeLists.txt  c.h  fmgr.h  pg_config_cmake.in  port.h  (+1 more)
src/interfaces/ecpg/compatlib/: CMakeLists.txt
src/interfaces/ecpg/ecpglib/: CMakeLists.txt
src/interfaces/ecpg/pgtypeslib/: CMakeLists.txt
src/test/modules/dummy_seclabel/: CMakeLists.txt  dummy_seclabel.c
src/test/modules/test_ddl_deparse/: CMakeLists.txt  test_ddl_deparse.c
(+35 files in other folders)
